--- a/src/games/wordle/Wordle.css
+++ b/src/games/wordle/Wordle.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    margin: 20px 0 90px 0;
+    margin: 20px 0 68px 0;
 }
 
 .wordleGame h1 {
